Name:           HaskellNet
Synopsis:       Client support for POP3, SMTP, and IMAP
Description:    This package provides client support for the POP3,
                SMTP, and IMAP protocols.  NOTE: this package will be
                split into smaller, protocol-specific packages in the
                future.
Version:        0.5.3
Copyright:      (c) 2006 Jun Mukai
Author:         Jun Mukai
Maintainer:     Jonathan Daugherty <cygnus@foobox.com>,
                Leza Morais Lutonda <lemol-c@outlook.com>
License:        BSD3
License-file:   LICENSE
Category:       Network
Homepage:       https://github.com/jtdaugherty/HaskellNet
Cabal-version:  >=1.10
Build-type:     Simple
Tested-with:
  GHC ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.2

Extra-Source-Files:
  CHANGELOG
  README.md
  example/*.hs

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/HaskellNet.git

Flag network-bsd
 description: Use network-bsd
 manual:      False
 default:     True

Library
  Hs-Source-Dirs: src
  GHC-Options: -Wall -fno-warn-unused-do-bind

  Exposed-modules:
    Network.HaskellNet.IMAP
    Network.HaskellNet.IMAP.Connection
    Network.HaskellNet.IMAP.Types
    Network.HaskellNet.IMAP.Parsers
    Network.HaskellNet.SMTP
    Network.HaskellNet.POP3
    Network.HaskellNet.POP3.Connection
    Network.HaskellNet.POP3.Types
    Network.HaskellNet.BSStream
    Network.HaskellNet.Auth
    Network.HaskellNet.Debug

  Other-modules:
    Network.Compat
    Text.Packrat.Pos
    Text.Packrat.Parse

  Build-Depends:
    base >= 4.3 && < 4.15,
    network >= 2.6.3.1 && < 3.2,
    mtl,
    bytestring >=0.10.2,
    pretty,
    array,
    cryptohash-md5,
    base64-string,
    old-time,
    mime-mail >= 0.4.7 && < 0.6,
    text

  if !impl(ghc >= 8.0)
    Build-depends: fail >= 4.9.0.0 && <4.10

  if flag(network-bsd)
    Build-Depends: network-bsd >=2.7 && <2.9,
                   network >=2.7
  else
    Build-Depends: network <2.7
