Name:           HaskellNet
Synopsis:       Client support for POP3, SMTP, and IMAP
Description:    This package provides client support for the POP3,
                SMTP, and IMAP protocols.
                .
                Full examples can be found in the <https://github.com/qnikst/HaskellNet/tree/master/example repository>.
                Additional documentation on the major updates can be found in the
                <https://github.com/qnikst/HaskellNet/blob/master/Updating.md Updating.md> file
Version:        0.6.0.1
Copyright:      (c) 2006 Jun Mukai
Author:         Jun Mukai
Maintainer:     Alexander Vershilov <alexander.vershilov@sirius.online>,
                Jonathan Daugherty <cygnus@foobox.com>,
                Leza Morais Lutonda <lemol-c@outlook.com>
License:        BSD3
License-file:   LICENSE
Category:       Network
Homepage:       https://github.com/qnikst/HaskellNet
Cabal-version:  1.22
Build-type:     Simple
Tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.2

Extra-Source-Files:
  CHANGELOG
  README.md
  Updating.md
  example/*.hs

Source-Repository head
  type:     git
  location: git://github.com/qnikst/HaskellNet.git

Flag network-bsd
 description: Use network-bsd
 manual:      False
 default:     True

Library
  Hs-Source-Dirs: src
  default-language: Haskell2010
  GHC-Options: -Wall -fno-warn-unused-do-bind

  Exposed-modules:
    Network.HaskellNet.IMAP
    Network.HaskellNet.IMAP.Connection
    Network.HaskellNet.IMAP.Types
    Network.HaskellNet.IMAP.Parsers
    Network.HaskellNet.SMTP
    Network.HaskellNet.SMTP.Internal
    Network.HaskellNet.POP3
    Network.HaskellNet.POP3.Connection
    Network.HaskellNet.POP3.Types
    Network.HaskellNet.BSStream
    Network.HaskellNet.Auth
    Network.HaskellNet.Debug

  Other-modules:
    Network.Compat
    Text.Packrat.Pos
    Text.Packrat.Parse
  Reexported-modules:
    Network.Mail.Mime

  Build-Depends:
    base >= 4.3 && < 4.17,
    network >= 2.6.3.1 && < 3.2,
    mtl,
    bytestring >=0.10.2,
    pretty,
    array,
    cryptohash-md5,
    base64,
    old-time,
    mime-mail >= 0.4.7 && < 0.6,
    text

  if !impl(ghc >= 8.0)
    Build-depends: fail >= 4.9.0.0 && <4.10

  if flag(network-bsd)
    Build-Depends: network-bsd >=2.7 && <2.9,
                   network >=2.7
  else
    Build-Depends: network <2.7
