Name:           HaskellNet
Version:        0.2
Author:         Jun Mukai
License:        BSD3
Category:       Network
Build-Depends:  base, haskell98, network, Crypto, mtl, time
Synopsis:       network related libraries such as HTTP, POP3, SMTP
Exposed-modules:
   Text.IMAPParsers,
   Text.Mime,
   Text.JSON,
   Text.URI,
   Text.Bencode,
   Text.RSS,
   HaskellNet.IMAP,
   HaskellNet.SMTP,
   HaskellNet.POP3,
   HaskellNet.HTTP,
   HaskellNet.Memcache,
   HaskellNet.BSStream,
   HaskellNet.Auth
other-modules:  Text.Packrat.Pos, Text.Packrat.Parse
