Name:           HaskellNet
Version:        0.2
Author:         Jun Mukai
License:        BSD3
Category:       Network
Build-Depends:  base, haskell98, network, mtl, parsec, time, bytestring, pretty, array, Crypto, base64-string, containers, HaXml, old-locale, old-time
Synopsis:       network related libraries such as POP3, SMTP, IMAP
cabal-version:  >=1.2
build-type:	Simple


exposed-modules:
   Text.IMAPParsers,
   Text.Mime,
   Text.URI,
   Text.Bencode,
   Text.RSS,
   Text.Atom,
   HaskellNet.IMAP,
   HaskellNet.SMTP,
   HaskellNet.POP3,
   HaskellNet.BSStream,
   HaskellNet.Auth
other-modules: Data.Record, Text.Packrat.Pos, Text.Packrat.Parse
